// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly 1`] = `
<div>
  <h2>
    Viewing 
    0
     expense
    s
     totalling
     
    $0.00
  </h2>
</div>
`;

exports[`should render ExpensesSummary with multible expenses correctly 1`] = `
<div>
  <h2>
    Viewing 
    5
     expense
    s
     totalling
     
    $8.40
  </h2>
</div>
`;

exports[`should render ExpensesSummary with one expense correctly 1`] = `
<div>
  <h2>
    Viewing 
    1
     expense
     totalling
     
    $1.20
  </h2>
</div>
`;
